@startuml

title __JAVA's Class Diagram__\n

  namespace  {
    class Dentist {
        + doTreatment()
    }
  }
  

  namespace  {
    class DbService {
        {static} - connection : Connection
        {static} - password : String
        {static} - rs : ResultSet
        {static} - stmt : Statement
        {static} - url : String
        {static} - user : String
        {static} + connect()
        {static} + disconnect()
        {static} + getDoctorsNameByRoomNumberAndDoctorType()
        {static} + getDoctorsTypeByRoomNumber()
        {static} + getRoomNumberByCause()
    }
  }
  

  namespace  {
    abstract class Doctor {
        {abstract} + doTreatment()
        + hippocraticOath()
    }
  }
  

  namespace  {
    class ENT {
        + doTreatment()
    }
  }
  

  namespace  {
    class Main {
        + request : String
        ~ reader : BufferedReader
        {static} + main()
    }
  }
  

  namespace  {
    class Ophthalmologist {
        + doTreatment()
    }
  }
  

  namespace  {
    class Patient {
        {static} + request : String
        {static} - name : String
        {static} + getName()
        {static} + goToDoctor()
        {static} + requestToTreatment()
        {static} + setName()
        {static} + speak()
    }
  }
  

  namespace  {
    class Registry {
        {static} - doctorType : String
        {static} - doctorsName : String
        {static} - roomNumber : int
        {static} + askToPatient()
        {static} + getDoctorsName()
        {static} + getDoctorsRoomNumber()
        {static} + getDoctorsType()
        {static} + referralPatientToDoctor()
    }
  }
  

  namespace  {
    class Surgeon {
        + doTreatment()
    }
  }
  

  Dentist -up-|> Doctor
  ENT -up-|> Doctor
  Ophthalmologist -up-|> Doctor
  Surgeon -up-|> Doctor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
